<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Tanggal Pengerjaan : 8/6/2024
  ~     Nim : 10121050
  ~     Nama : Rio Christian Cesar Sihombing
  ~     email :riosihombing047@gmail.com
  ~     Copyright © 2024 Rio Sihombing. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/pale_pink">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:fontFamily="@font/larken_medium"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:fontFamily="@font/larken_light"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imageList"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:src="@drawable/profil"
                app:civ_border="false"
                app:civ_shadow="true"
                app:civ_shadow_color="@color/rosy_brown"
                app:civ_shadow_radius="5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rio"
                android:textAlignment="center"
                android:fontFamily="@font/caviar_dreams"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/larken_light"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="0"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/nim" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/_10121050"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                       android:layout_weight="0"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/nama"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/rio_s"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="0"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/kelas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/if_2"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="0"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/alamat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/jayapura"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="0"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/agama"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/kristen"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="0"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/jenis_kelamin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/laki_laki"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest2"
                android:fontFamily="@font/larken_light"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/hobi"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/basket"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/game_kesukaan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/pubg"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/makanan_kesukaan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/pork"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/interest2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/mobile_apps"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:text="@string/cita_cita"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/caviar_dreams"
                        android:layout_weight="1"
                        android:text="@string/pro_player"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

</RelativeLayout>